bin_PROGRAMS = Axiom
Axiom_SOURCES = Main.cpp Camera.cpp GameAsset.cpp BoundingBox.cpp TriangularPyramidAsset.cpp BallisticInterpolator.cpp CuboidAsset.cpp Md2Asset.cpp ModelTriangle.cpp PolygonTest.cpp LevelLoader.cpp

AM_CPPFLAGS =  -I../include/ -std=c++0x
AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS)
LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS)
