bin_PROGRAMS = Axiom
Axiom_SOURCES = src/Main.cpp src/Camera.cpp src/GameAsset.cpp src/BoundingBox.cpp src/TriangularPyramidAsset.cpp src/BallisticInterpolator.cpp src/CuboidAsset.cpp src/Md2Asset.cpp src/ModelTriangle.cpp src/PolygonTest.cpp src/LevelLoader.cpp src/GAPlus.cpp src/Md3Asset.cpp

AM_CPPFLAGS =  -I../include/ -std=c++0x
AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS)
LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS)
